2021-06-12 Marek M. Cel <marekcel@marekcel.pl>
    
    * cleanup
    
    * license change



2020-11-28 Marek M. Cel <marekcel@marekcel.pl>
    
    * cleanup



2020-07-18 Marek M. Cel <marekcel@marekcel.pl>
    
    * OpenSceneGraph-Qt integration without using osgQt library



2020-07-11 Marek M. Cel <marekcel@marekcel.pl>
    
    * OpenSceneGraph-Qt integration without using osgQt library
    
    * screen saver inhibition



2020-05-17 Marek M. Cel <marekcel@marekcel.pl>
    
    * units database



2020-04-25 Marek M. Cel <marekcel@marekcel.pl>
    
    * DELPTR and DELTAB macros used instead of simple deleting objects
    
    * unit viewer added
    
    * cleanup



2020-04-19 Marek M. Cel <marekcel@marekcel.pl>
    
    * refactorization
    
    * reading units data from file and populating units combo box



2020-04-18 Marek M. Cel <marekcel@marekcel.pl>

    * initial commit