@@ -3,6 +3,10 @@
     * cleanup
     
     * license change
+    
+    * HUD throttle autohide
+    
+    * missions and campaigns for GUI
 
 
 
